// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SinglePostsGlossaryPost Snapshot > renders with full post and auth disabled correctly 1`] = `
"<div>
  <div class="mt-10 grid grid-cols-1 lg:grid-cols-3">
    <div class="col-span-2 pb-10">
      <h1 class="text-4xl font-bold lg:text-6xl">Nuxt Testing</h1>
      <p class="prose dark:prose-invert mt-4">A quick guide on snapshot testing.</p>
    </div>
    <div class="col-span-1 pb-10">
      <div aria-busy="true" aria-label="YouTube Player - Loading" role="application" style="position: relative; background-color: black; max-width: 100%; width: 640px; aspect-ratio: 640 / 360;">
        <div style="width: 100%; height: 100%; position: absolute; top: 0px; left: 0px;"></div><img src="https://i.ytimg.com/vi_webp/abc123/sddefault.webp" alt="" loading="lazy" style="width: 100%; object-fit: cover; height: 100%;">
        <div data-v-e783c43c="" class="loader" styles="[object Object]" aria-label="Loading..." role="status"></div>
      </div>
    </div>
    <div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row col-span-3 my-4">
      <div class="border-(--ui-border) w-full border-solid border-t"></div>
      <div class="font-medium text-(--ui-text) flex mx-3 whitespace-nowrap">
        <div class="flex items-center space-x-2"><svg width="35pt" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" aria-label="SERP Brand logo">
            <path class="fill-[var(--ui-primary)]" d=" M 127.62 540.68 C 255.64 429.97 383.70 319.31 511.76 208.65 C 639.74 319.23 767.70 429.86 895.69 540.45 C 895.70 631.71 895.73 722.97 895.64 814.23 C 719.72 662.17 543.76 510.14 367.81 358.10 C 398.86 414.80 429.83 471.54 460.92 528.22 C 349.85 623.79 238.69 719.27 127.67 814.91 C 127.66 723.50 127.67 632.09 127.62 540.68 Z"></path>
          </svg></div>
      </div>
      <div class="border-(--ui-border) w-full border-solid border-t"></div>
    </div><!-- main section -->
    <div class="prose dark:prose-invert col-span-2">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <article>
        <p>Content of the post</p>
      </article>
      <div>
        <h2>Related Posts</h2>
        <ul>
          <li>Term 1</li>
          <li>Term 2</li>
          <li>Term 3</li>
        </ul>
      </div><!-- Comments Section -->
      <!--v-if-->
    </div><!-- sidebar -->
    <div class="col-span-1"></div>
  </div>
</div>"
`;

exports[`SinglePostsGlossaryPost Snapshot > renders with full post and auth enabled correctly 1`] = `
"<div>
  <div class="mt-10 grid grid-cols-1 lg:grid-cols-3">
    <div class="col-span-2 pb-10">
      <h1 class="text-4xl font-bold lg:text-6xl">Nuxt Testing</h1>
      <p class="prose dark:prose-invert mt-4">A quick guide on snapshot testing.</p>
    </div>
    <div class="col-span-1 pb-10">
      <div aria-busy="true" aria-label="YouTube Player - Loading" role="application" style="position: relative; background-color: black; max-width: 100%; width: 640px; aspect-ratio: 640 / 360;">
        <div style="width: 100%; height: 100%; position: absolute; top: 0px; left: 0px;"></div><img src="https://i.ytimg.com/vi_webp/abc123/sddefault.webp" alt="" loading="lazy" style="width: 100%; object-fit: cover; height: 100%;">
        <div data-v-e783c43c="" class="loader" styles="[object Object]" aria-label="Loading..." role="status"></div>
      </div>
    </div>
    <div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row col-span-3 my-4">
      <div class="border-(--ui-border) w-full border-solid border-t"></div>
      <div class="font-medium text-(--ui-text) flex mx-3 whitespace-nowrap">
        <div class="flex items-center space-x-2"><svg width="35pt" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" aria-label="SERP Brand logo">
            <path class="fill-[var(--ui-primary)]" d=" M 127.62 540.68 C 255.64 429.97 383.70 319.31 511.76 208.65 C 639.74 319.23 767.70 429.86 895.69 540.45 C 895.70 631.71 895.73 722.97 895.64 814.23 C 719.72 662.17 543.76 510.14 367.81 358.10 C 398.86 414.80 429.83 471.54 460.92 528.22 C 349.85 623.79 238.69 719.27 127.67 814.91 C 127.66 723.50 127.67 632.09 127.62 540.68 Z"></path>
          </svg></div>
      </div>
      <div class="border-(--ui-border) w-full border-solid border-t"></div>
    </div><!-- main section -->
    <div class="prose dark:prose-invert col-span-2">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <article>
        <p>Content of the post</p>
      </article>
      <div>
        <h2>Related Posts</h2>
        <ul>
          <li>Term 1</li>
          <li>Term 2</li>
          <li>Term 3</li>
        </ul>
      </div><!-- Comments Section -->
      <div class="mt-10">
        <h2 class="mb-6 text-3xl font-bold">Comments</h2>
        <div data-v-e7198dba="" class="comments comments-github-style" style="background: transparent;">
          <div data-v-e7198dba="" class="innerWrapper">
            <div data-v-e7198dba="" class="userName">
              <div data-v-e7198dba="" class="addComment">
                <div data-v-e7198dba="" class="w-12 rounded-t-full">
                  <!--v-if-->
                </div>
                <div data-v-e7198dba="" class="commentBox text-black dark:text-white"><textarea data-v-e7198dba="" name="addComment" class="addComment border-neutral-500 bg-white dark:border-neutral-400 dark:bg-neutral-800" placeholder="Add a comment" spellcheck="true" aria-label="Add comment"></textarea>
                  <!--v-if-->
                  <!--v-if-->
                </div>
              </div>
            </div>
            <transition-group-stub data-v-e7198dba="" name="fade" tag="div" appear="true" persisted="false" css="true"></transition-group-stub>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div><!-- sidebar -->
    <div class="col-span-1"></div>
  </div>
</div>"
`;

exports[`SinglePostsGlossaryPost Snapshot > renders with non-empty relatedPosts correctly 1`] = `
"<div>
  <div class="mt-10 grid grid-cols-1 lg:grid-cols-3">
    <div class="col-span-2 pb-10">
      <h1 class="text-4xl font-bold lg:text-6xl">Related Posts Present</h1>
      <p class="prose dark:prose-invert mt-4">Post with related posts</p>
    </div>
    <div class="col-span-1 pb-10">
      <div aria-busy="false" aria-label="YouTube Player - Loaded" role="application" style="position: relative; background-color: black; max-width: 100%; width: 640px; aspect-ratio: 640 / 360;">
        <div style="width: 100%; height: 100%; position: absolute; top: 0px; left: 0px;"></div><img src="https://i.ytimg.com/vi_webp/def456/sddefault.webp" alt="" loading="lazy" style="width: 100%; object-fit: cover; height: 100%;">
        <!--v-if-->
      </div>
    </div>
    <div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row col-span-3 my-4">
      <div class="border-(--ui-border) w-full border-solid border-t"></div>
      <div class="font-medium text-(--ui-text) flex mx-3 whitespace-nowrap">
        <div class="flex items-center space-x-2"><svg width="35pt" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" aria-label="SERP Brand logo">
            <path class="fill-[var(--ui-primary)]" d=" M 127.62 540.68 C 255.64 429.97 383.70 319.31 511.76 208.65 C 639.74 319.23 767.70 429.86 895.69 540.45 C 895.70 631.71 895.73 722.97 895.64 814.23 C 719.72 662.17 543.76 510.14 367.81 358.10 C 398.86 414.80 429.83 471.54 460.92 528.22 C 349.85 623.79 238.69 719.27 127.67 814.91 C 127.66 723.50 127.67 632.09 127.62 540.68 Z"></path>
          </svg></div>
      </div>
      <div class="border-(--ui-border) w-full border-solid border-t"></div>
    </div><!-- main section -->
    <div class="prose dark:prose-invert col-span-2">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <article>
        <p>Some content here</p>
      </article>
      <!--v-if-->
      <!-- Comments Section -->
      <div class="mt-10">
        <h2 class="mb-6 text-3xl font-bold">Comments</h2>
        <div data-v-e7198dba="" class="comments comments-github-style" style="background: transparent;">
          <div data-v-e7198dba="" class="innerWrapper">
            <div data-v-e7198dba="" class="userName">
              <div data-v-e7198dba="" class="addComment">
                <div data-v-e7198dba="" class="w-12 rounded-t-full">
                  <!--v-if-->
                </div>
                <div data-v-e7198dba="" class="commentBox text-black dark:text-white"><textarea data-v-e7198dba="" name="addComment" class="addComment border-neutral-500 bg-white dark:border-neutral-400 dark:bg-neutral-800" placeholder="Add a comment" spellcheck="true" aria-label="Add comment"></textarea>
                  <!--v-if-->
                  <!--v-if-->
                </div>
              </div>
            </div>
            <transition-group-stub data-v-e7198dba="" name="fade" tag="div" appear="true" persisted="false" css="true"></transition-group-stub>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div><!-- sidebar -->
    <div class="col-span-1"></div>
  </div>
</div>"
`;

exports[`SinglePostsGlossaryPost Snapshot > renders without video and minimal fields correctly 1`] = `
"<div>
  <div class="mt-10 grid grid-cols-1 lg:grid-cols-3">
    <div class="col-span-2 pb-10">
      <h1 class="text-4xl font-bold lg:text-6xl">No Video Post</h1>
      <!--v-if-->
    </div>
    <div class="col-span-1 pb-10">
      <!--v-if-->
    </div>
    <div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row col-span-3 my-4">
      <div class="border-(--ui-border) w-full border-solid border-t"></div>
      <div class="font-medium text-(--ui-text) flex mx-3 whitespace-nowrap">
        <div class="flex items-center space-x-2"><svg width="35pt" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" aria-label="SERP Brand logo">
            <path class="fill-[var(--ui-primary)]" d=" M 127.62 540.68 C 255.64 429.97 383.70 319.31 511.76 208.65 C 639.74 319.23 767.70 429.86 895.69 540.45 C 895.70 631.71 895.73 722.97 895.64 814.23 C 719.72 662.17 543.76 510.14 367.81 358.10 C 398.86 414.80 429.83 471.54 460.92 528.22 C 349.85 623.79 238.69 719.27 127.67 814.91 C 127.66 723.50 127.67 632.09 127.62 540.68 Z"></path>
          </svg></div>
      </div>
      <div class="border-(--ui-border) w-full border-solid border-t"></div>
    </div><!-- main section -->
    <div class="prose dark:prose-invert col-span-2">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <article>
        <p>Content without video</p>
      </article>
      <!--v-if-->
      <!-- Comments Section -->
      <div class="mt-10">
        <h2 class="mb-6 text-3xl font-bold">Comments</h2>
        <div data-v-e7198dba="" class="comments comments-github-style" style="background: transparent;">
          <div data-v-e7198dba="" class="innerWrapper">
            <div data-v-e7198dba="" class="userName">
              <div data-v-e7198dba="" class="addComment">
                <div data-v-e7198dba="" class="w-12 rounded-t-full">
                  <!--v-if-->
                </div>
                <div data-v-e7198dba="" class="commentBox text-black dark:text-white"><textarea data-v-e7198dba="" name="addComment" class="addComment border-neutral-500 bg-white dark:border-neutral-400 dark:bg-neutral-800" placeholder="Add a comment" spellcheck="true" aria-label="Add comment"></textarea>
                  <!--v-if-->
                  <!--v-if-->
                </div>
              </div>
            </div>
            <transition-group-stub data-v-e7198dba="" name="fade" tag="div" appear="true" persisted="false" css="true"></transition-group-stub>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div><!-- sidebar -->
    <div class="col-span-1"></div>
  </div>
</div>"
`;
